--- a/blog.html
+++ b/blog.html
@@ -57,13 +57,56 @@
             margin-top: 40px;
             font-size: 0.9em;
             color: #555;
+            background-color: #f0f8ff;
+            padding: 20px 0;
+            border-top: 1px solid #ccc;
+        }
+        /* Styling untuk ikon media sosial */
+        .social-links {
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+            font-size: 28px;
+            margin-bottom: 10px;
+        }
+        .social-links a {
+            text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s ease;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+        .social-links a.instagram {
+            color: #E1306C;
+        }
+        .social-links a.instagram:hover {
+            color: #b72e5a;
+        }
+        .social-links a.whatsapp {
+            color: #25D366;
+        }
+        .social-links a.whatsapp:hover {
+            color: #1da851;
+        }
+        .social-links a.tiktok {
+            color: #000000;
+        }
+        .social-links a.tiktok:hover {
+            color: #444444;
         }
         @media (max-width: 600px) {
             body {
                 padding: 0 10px;
             }
+            .social-links {
+                font-size: 24px;
+                gap: 20px;
+            }
         }
     </style>
+    <!-- Link Font Awesome untuk ikon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
     <header>
@@ -71,7 +114,7 @@
     </header>
 
     <nav>
-        <a href="profil.html">Profil</a>
+        <a href="index.html">Profil</a>
         <a href="portofolio.html">Portofolio</a>
         <a href="blog.html">Blog</a>
     </nav>
@@ -97,7 +140,18 @@
     </section>
 
     <footer>
-        &copy; 2025 Surya Agung Wicaksono. Semua hak cipta dilindungi.
+        <div class="social-links">
+            <a href="https://www.instagram.com/mochiiyouuu/" target="_blank" rel="noopener" aria-label="Instagram" class="instagram">
+                <i class="fab fa-instagram"></i> Instagram
+            </a>
+            <a href="https://wa.me/+62895359710532" target="_blank" rel="noopener" aria-label="WhatsApp" class="whatsapp">
+                <i class="fab fa-whatsapp"></i> WhatsApp
+            </a>
+            <a href="https://www.tiktok.com/@justizumi._" target="_blank" rel="noopener" aria-label="TikTok" class="tiktok">
+                <i class="fab fa-tiktok"></i> TikTok
+            </a>
+        </div>
+        <p>© 2025 Surya Agung Wicaksono. Semua hak cipta dilindungi.</p>
     </footer>
 </body>
 </html>
