--- a/portofolio.html
+++ b/portofolio.html
@@ -144,22 +144,22 @@
             <div class="project">
                 <h3>Mini-Game Catur</h3>
                 <p>Permainan catur interaktif berbasis web dengan antarmuka yang sederhana dan responsif.</p>
-                <a href="chess/index.html" target="_blank" rel="noopener">Mainkan Catur</a>
+                <a href="Chess/index.html" target="_blank" rel="noopener">Mainkan Catur</a>
             </div>
             <div class="project">
                 <h3>Mini-Game Ular Tangga</h3>
                 <p>Permainan ular tangga klasik yang dapat dimainkan secara online dengan fitur animasi sederhana.</p>
-                <a href="snakesandladder/index.html" target="_blank" rel="noopener">Mainkan Ular Tangga</a>
+                <a href="SnakesAndLadder/index.html" target="_blank" rel="noopener">Mainkan Ular Tangga</a>
             </div>
             <div class="project">
                 <h3>Mini-Game Tetris</h3>
                 <p>Game Tetris klasik dengan kontrol mudah dan tampilan yang menarik.</p>
-                <a href="tetris/index.html" target="_blank" rel="noopener">Mainkan Tetris</a>
+                <a href="Tetris/index.html" target="_blank" rel="noopener">Mainkan Tetris</a>
             </div>
             <div class="project">
                 <h3>Data Mahasiswa</h3>
                 <p>Dataset dan aplikasi terkait data mahasiswa yang berisi informasi akademik dan profil mahasiswa.</p>
-                <a href="data mahasiswa/index.html" target="_blank" rel="noopener">Lihat Data Mahasiswa</a>
+                <a href="Data Mahasiswa/index.html" target="_blank" rel="noopener">Lihat Data Mahasiswa</a>
             </div>
         </div>
     </section>
